--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script>
      function confirmLogin() {
          alert("Você fez login!");
-         window.location.href = 'index.html';
+         window.location.href = 'inicio.html';
      }
   </script>
 </body>
